--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.0.0",
+    "@sendgrid/mail": "^8.1.6",
+    "next": "^14.2.35",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@sendgrid/mail": "^7.8.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "5.2.2",
+    "@types/node": "20.4.2",
     "@types/react": "18.2.28",
-    "@types/node": "20.4.2"
+    "typescript": "5.2.2"
   }
 }
